fix crash for native providers

This change fixes a crash when Native Filesystem Providers call the
Service::RequestMount() function via the providers_menu in the CrOS
Files App.

Bug: chromium:827023
Test: manually verified on eve
Change-Id: I25ba6fb33fe9c9ae1a360368c0d8bb45728fc7a1
Reviewed-on: https://chromium-review.googlesource.com/972421
Reviewed-by: Naoki Fukino <fukino@chromium.org>
Reviewed-by: Tomasz Mikolajewski <mtomasz@chromium.org>
Reviewed-by: Zentaro Kavanagh <zentaro@chromium.org>
Commit-Queue: Bailey Berro <baileyberro@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546741}
Former-commit-id: 249c490d402b0597ad432c279b31f23ccdf917c6