chrome/browser/chromeos/file_system_provider/extension_provider.h
@@ -51,6 +51,7 @@ class ExtensionProvider : public ProviderInterface {
   const ProviderId& GetId() const override;
   const std::string& GetName() const override;
   const IconSet& GetIconSet() const override;
+  bool RequestMount(Profile* profile) override;
 
  private:
   ExtensionProvider(const extensions::ExtensionId& extension_id,
