chrome/browser/chromeos/file_system_provider/fake_extension_provider.h
@@ -36,6 +36,7 @@ class FakeExtensionProvider : public ProviderInterface {
   const ProviderId& GetId() const override;
   const std::string& GetName() const override;
   const IconSet& GetIconSet() const override;
+  bool RequestMount(Profile* profile) override;
 
  protected:
   FakeExtensionProvider(const extensions::ExtensionId& extension_id,
